# 3rdEyeScene

./: .gitignore  .gitmodules  Doxyfile  DoxyfileCSharp  astyle.rc  license.txt  readme.md  todo.txt
3esCore/: 3esCore.sln  3esdoc.cs  build.md  unity-marhsal.py  unity-marshal.py
3esCore/3esCore/: 3esCore.csproj  SR.cs
3esCore/3esExamplePlugin/: 3esExamplePlugin.csproj  PyramidHandler.cs
3esCore/3esExamplePluginCore/: 3esExamplePluginCore.csproj
3esCore/3esInfo/: 3esinfo.csproj  Program.cs
3esCore/3esManyTest/: 3esManyTest.csproj  Program.cs
3esCore/3esPluginTest/: 3esPluginTest.csproj  Program.cs  Pyramid.cs
3esCore/3esRuntime/: 3esRuntime.csproj
3esCore/3esServerTest/: 3esServerTest.csproj  Oscilator.cs  Oscillator.cs  Program.cs  ShapeMover.cs
3esCore/3esinfo/: 3esinfo.csproj
3esCore/3esrec/: 3esrec.csproj  FrameDisplay.cs  Program.cs
3esCore/CoreTests/: Buffers.cs  Collated.cs  Common.cs  CoreTests.csproj  Packets.cs  ShapeTestFramework.cs  Shapes.cs
3esCore/GZipTest/: GZipTest.csproj  Program.cs
3esCore/TestSupport/: AssertExt.cs  SceneGenerator.cs  SphereTessellator.cs  TestSupport.csproj
3rdEyeScene/: .gitignore
3rdEyeScene/Assets/: 3rdEyeScene.unity
3rdEyeScene/ProjectSettings/: EditorBuildSettings.asset  EditorSettings.asset  GraphicsSettings.asset  InputManager.asset  ProjectSettings.asset  QualitySettings.asset  TimeManager.asset  VFXManager.asset
UnityOFDialog/: Assembly-CSharp-Editor-firstpass.csproj  Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  UnityOFDialog.CSharp.Editor.Plugins.csproj  UnityOFDialog.CSharp.csproj  UnityOFDialog.Editor.Plugins.csproj  UnityOFDialog.csproj  UnityOFDialog.sln
UnityOFDialog/Assets/: FBrows.unity  TestOFScript.cs
UnityOFDialog/ProjectSettings/: GraphicsSettings.asset  ProjectSettings.asset  TimeManager.asset  UnityConnectSettings.asset
cpp/: CMakeLists.txt
cpp/3es-core/: 3es-core.h.in  3es-core.in.h  3esbounds.cpp  3esbounds.h  3escollatedpacket.cpp  3escollatedpacket.h  3escolour.cpp  3escolour.h  3esconnection.h  3esconnectionmonitor.h  3escoordinateframe.h  3escoredoc.h  3escoreutil.cpp  3escoreutil.h  3escrc.cpp  3escrc.h  3esdebug.h  3esendian.cpp  3esendian.h  3esfeature.cpp  3esfeature.h  3esintarg.h  3esmaths.h  3esmathsmanip.cpp  3esmathsmanip.h  3esmathsstream.h  3esmatrix3.cpp  3esmatrix3.h  3esmatrix3.inl  3esmatrix4.cpp  3esmatrix4.h  3esmatrix4.inl  3esmeshmessages.h  3esmessages.cpp  3esmessages.h  3esmeta.h  3espacketbuffer.cpp  3espacketbuffer.h  3espacketheader.cpp  3espacketheader.h  (+40 more)
cpp/3es-core/3es-doc/: 3esdocbuilding.h  3esdocfileformat.h  3esdocmain.h  3esdocprotocol.h  3esdocthirdparty.h  3esplugins.h  doxyfile.in
cpp/3es-core/cmake/: 3es-config.in.cmake  3es-version.cmake  doxygen.cmake
cpp/3es-core/nix/: 3esdebug.cpp
cpp/3es-core/poco/: 3estcpdetail.h  3estcplistensocket.cpp  3estcpsocket.cpp
cpp/3es-core/private/: 3esitemtransfer.h  3estcpconnection.cpp  3estcpconnection.h  3estcpconnectionmonitor.cpp  3estcpconnectionmonitor.h  3estcpserver.cpp  3estcpserver.h
cpp/3es-core/qt/: 3estcpdetail.h  3estcplistensocket.cpp  3estcpsocket.cpp
cpp/3es-core/shapes/: 3esarrow.cpp  3esarrow.h  3esbox.h  3escapsule.cpp  3escapsule.h  3escone.cpp  3escone.h  3escylinder.cpp  3escylinder.h  3esmeshplaceholder.cpp  3esmeshplaceholder.h  3esmeshresource.cpp  3esmeshresource.h  3esmeshset.cpp  3esmeshset.h  3esmeshshape.cpp  3esmeshshape.h  3esplane.cpp  3esplane.h  3espointcloud.cpp  3espointcloud.h  3espointcloudshape.cpp  3espointcloudshape.h  3esshape.cpp  3esshape.h  3esshapes.cpp  3esshapes.h  3essimplemesh.cpp  3essimplemesh.h  3essphere.h  3esstar.h  3estext2d.cpp  3estext2d.h  3estext3d.cpp  3estext3d.h
cpp/3es-core/tcp/: 3estcpbase.cpp  3estcpbase.h  3estcpdetail.h  3estcplistensocket.cpp  3estcpsocket.cpp
cpp/3es-core/win/: 3esdebug.cpp
cpp/3es-doc/: 3esdocbuilding.h  3esdoclicense.h  3esdocmain.h  3esdocogranisation.h  3esdocprotocol.h  3esdocthirdparty.h  3esdocusage.h  3esdocviewer.h
cpp/cmake/: 3es-config.cmake  3es-config.h.in  3es.cmake  FindLASZIP.cmake  doxyfile.in  doxygen.cmake
cpp/examples/: CMakeLists.txt
cpp/examples/3es-occupancy/: 3es-occupancy.cpp  3es-occupancy.h  3es-occupancy.h.in  CMakeLists.txt  debugids.h  occupancyloader.cpp  occupancyloader.h  occupancymesh.cpp  occupancymesh.h  p2p.h
cpp/examples/3es-sphere-view/: 3es-sphere-view.cpp  CMakeLists.txt
cpp/test/: CMakeLists.txt
cpp/test/3est-bandwidth/: 3est-bandwidth.cpp  CMakeLists.txt
cpp/test/3est-primitive-server/: 3es-primitive-server.cpp  CMakeLists.txt
cpp/test/3est-server/: 3es-server-test.cpp  3es-server-test.h.in  CMakeLists.txt
cpp/test/3est-shapes/: 3est-shapes.cpp  CMakeLists.txt
docs/: 3es-core-export_8h_source.html  3es-core_8h_source.html  3es-core_8in_8h_source.html  3es-occupancy_8h_source.html  3es-server-test_8h_source.html  3es-sphere-view_8h_source.html  3esarrow_8h_source.html  3esbounds_8h_source.html  3esbox_8h_source.html  3escapsule_8h_source.html  3escollatedpacket_8h_source.html  3escolour_8h_source.html  3escone_8h_source.html  3esconnection_8h_source.html  3esconnectionmonitor_8h_source.html  3escoordinateframe_8h_source.html  3escoredoc_8h_source.html  3escoreutil_8h_source.html  3escrc_8h_source.html  3escylinder_8h_source.html  3esdocbuilding_8h_source.html  3esdocfileformat_8h_source.html  3esdoclicense_8h_source.html  3esdocmain_8h_source.html  3esdocogranisation_8h_source.html  3esdocprotocol_8h_source.html  3esdocthirdparty_8h_source.html  3esdocusage_8h_source.html  3esdocviewer_8h_source.html  3esendian_8h_source.html  3esfeature_8h_source.html  3esitemtransfer_8h_source.html  3esmaths_8h_source.html  3esmatrix3_8h_source.html  3esmatrix4_8h_source.html  3esmeshmessages_8h_source.html  3esmeshplaceholder_8h_source.html  3esmeshresource_8h_source.html  3esmeshset_8h_source.html  3esmeshshape_8h_source.html  (+1235 more)
docs/csharp/: annotated.html  classTes_1_1Buffers_1_1ArrayPool-g-members.html  classTes_1_1Buffers_1_1ArrayPool-g.html  classTes_1_1Buffers_1_1DefaultArrayPool-g-members.html  classTes_1_1Collections_1_1Queue-g.html  (+320 more)
(+837 files in other folders)
